# RiftSkeleton

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: CopyDLLsToBuild.cmake  InvokePython.cmake
doc/: LinuxNotes.md  RiftSkel-testlogs.txt  UsingOSVR.md
shaders/: presentfbo.frag  presentmesh.frag  presentmesh.vert
src/: glfw_main.cpp  glfw_sdk06_main.cpp  main_include.cpp  sdl_main.cpp  sdl_sdk06_main.cpp  sfml_main.cpp
src/AppSkeleton/: AppSkeleton.cpp  AppSkeleton.h  OVRSDK05AppSkeleton.cpp  OVRSDK05AppSkeleton.h  OVRSDK06AppSkeleton.cpp  OVRSDK06AppSkeleton.h  OVRSDK07AppSkeleton.cpp  OVRSDK07AppSkeleton.h  OVRSDK08AppSkeleton.cpp  OVRSDK08AppSkeleton.h  OsvrAppSkeleton.cpp  OsvrAppSkeleton.h  RenderingMode.h  RiftAppSkeleton.cpp  RiftAppSkeleton.h  SpaceCursor.cpp  SpaceCursor.h
src/FlyingMouse/: FlyingMouse.cpp  FlyingMouse.h  VirtualTrackball.cpp  VirtualTrackball.h
src/Scene/: HydraScene.cpp  IScene.h  OVRScene.cpp  OVRScene.h  Scene.cpp  Scene.h
src/Util/: Logger.cpp  Logger.h  StringFunctions.cpp  StringFunctions.h  Timer.h
src/Util/GL/: FBO.cpp  MatrixFunctions.cpp  MatrixFunctions.h  ShaderFunctions.cpp  ShaderFunctions.h
tools/: copyDLLs.py  hardcode_shaders.py
